fix: updated html & css files

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
           </li>
         </ul>
         <ul class="nav-list">
-          <hr>
+          <li class="line-hr">
+            <hr>
+          </li>
           <li>
             <a href="#" onclick="scrollToElement('information')">Information</a>
           </li>
@@ -162,6 +164,7 @@ app.listen(3000);
             <p>Education: Secondary education</p>
           </div>
         </div>
+      </div>
     </main>
   </div>
 
@@ -169,11 +172,11 @@ app.listen(3000);
   <footer>
     <div class="footer-container">
       <a href="https://rs.school/courses/javascript-ru">
-        <img class="logo-rsschool" src='./images/rs-school-logo.svg'>
+        <img class="logo-rsschool" src='./images/rs-school-logo.svg' alt="logo-rsschool">
       </a>
       <p>&copy;2025</p>
       <a href="https://github.com/Nikisite">
-        <img class="logo-github" src='./images/github-logo.png'>
+        <img class="logo-github" src='./images/github-logo.png' alt="github">
       </a>
     </div>
   </footer>
